site/docs/v0.1.0/zh/components/table.mdx
# 表格

<Preview class="w-full">
<div class="table-container">
<table class="table">
  <caption>A list of your recent invoices.</caption>
  <thead>
    <tr>
      <th>Invoice</th>
      <th>Status</th>
      <th>Method</th>
      <th>Amount</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class="font-medium">INV001</td>
      <td>Paid</td>
      <td>Credit Card</td>
      <td class="text-end">$250.00</td>
    </tr>
    <tr>
      <td class="font-medium">INV002</td>
      <td>Pending</td>
      <td>PayPal</td>
      <td class="text-end">$150.00</td>
    </tr>
    <tr>
      <td class="font-medium">INV003</td>
      <td>Unpaid</td>
      <td>Bank Transfer</td>
      <td class="text-end">$350.00</td>
    </tr>
    <tr>
      <td class="font-medium">INV004</td>
      <td>Paid</td>
      <td>Paypal</td>
      <td class="text-end">$450.00</td>
    </tr>
    <tr>
      <td class="font-medium">INV005</td>
      <td>Paid</td>
      <td>Credit Card</td>
      <td class="text-end">$550.00</td>
    </tr>
    <tr>
      <td class="font-medium">INV006</td>
      <td>Pending</td>
      <td>Bank Transfer</td>
      <td class="text-end">$200.00</td>
    </tr>
    <tr>
      <td class="font-medium">INV007</td>
      <td>Unpaid</td>
      <td>Credit Card</td>
      <td class="text-end">$300.00</td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td colspan="3">Total</td>
      <td class="text-end">$2,500.00</td>
    </tr>
  </tfoot>
</table>
</div>
</Preview>

## 用途

<Steps>
  <Step title="Include CSS">

导入 Tailwind 和一个完整的 A3S UI 样式包。

```css
@import "tailwindcss";
@import "@a3s-lab/ui/a3s.css";
```

或者只导入基本CSS、表格组件CSS和一个样式包。

```css
@import "tailwindcss";
@import "@a3s-lab/ui/base.css";
@import "@a3s-lab/ui/components/table.css";
@import "@a3s-lab/ui/styles/a3s.css";
```

使用CDN或批量程序导入？请参见[安装页](/installation)。

  </Step>
  <Step title="Add your table HTML">

将 `class="table"` 添加到您的表元素中。当需要水平滚动时，将其包裹在`class="table-container"`中。

```html
<div class="table-container">
<table class="table">
  <!-- Content of your table -->
</table>
</div>
```

  </Step>
</Steps>

<Callout type="warning" title="Scrollable tables clip overlays" icon="triangle-alert">
请勿将内联弹出框、下拉菜单、选择或工具提示放置在 `.table-container` 内。表格容器对宽表格使用水平溢出，因此可以剪切绝对定位的覆盖层或创建滚动条。将覆盖操作保留在可滚动表格区域之外，或者当表格不需要水平滚动时省略 `.table-container`。
</Callout>

## 示例

下面的示例遵循上游表模式，它们清晰地映射到 A3S UI 的非门户 HTML 模型。

### 带页脚

<Preview class="w-full">
<div class="table-container">
<table class="table">
  <caption>A list of your recent invoices.</caption>
  <thead>
    <tr>
      <th class="w-[100px]">Invoice</th>
      <th>Status</th>
      <th>Method</th>
      <th class="text-end">Amount</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class="font-medium">INV001</td>
      <td>Paid</td>
      <td>Credit Card</td>
      <td class="text-end">$250.00</td>
    </tr>
    <tr>
      <td class="font-medium">INV002</td>
      <td>Pending</td>
      <td>PayPal</td>
      <td class="text-end">$150.00</td>
    </tr>
    <tr>
      <td class="font-medium">INV003</td>
      <td>Unpaid</td>
      <td>Bank Transfer</td>
      <td class="text-end">$350.00</td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td colspan="3">Total</td>
      <td class="text-end">$2,500.00</td>
    </tr>
  </tfoot>
</table>
</div>
</Preview>

### 带操作

<Preview class="w-full">
<div class="table-container">
<table class="table">
  <thead>
    <tr>
      <th>Product</th>
      <th>Price</th>
      <th class="text-end">Actions</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class="font-medium">Wireless Mouse</td>
      <td>$29.99</td>
      <td class="text-end">
        <div class="inline-flex gap-2">
          <button type="button" class="btn" data-variant="outline" data-size="sm">Edit</button>
          <button type="button" class="btn" data-variant="destructive" data-size="sm">Delete</button>
        </div>
      </td>
    </tr>
    <tr>
      <td class="font-medium">Mechanical Keyboard</td>
      <td>$129.99</td>
      <td class="text-end">
        <div class="inline-flex gap-2">
          <button type="button" class="btn" data-variant="outline" data-size="sm">Edit</button>
          <button type="button" class="btn" data-variant="destructive" data-size="sm">Delete</button>
        </div>
      </td>
    </tr>
    <tr>
      <td class="font-medium">USB-C Hub</td>
      <td>$49.99</td>
      <td class="text-end">
        <div class="inline-flex gap-2">
          <button type="button" class="btn" data-variant="outline" data-size="sm">Edit</button>
          <button type="button" class="btn" data-variant="destructive" data-size="sm">Delete</button>
        </div>
      </td>
    </tr>
  </tbody>
</table>
</div>
</Preview>

### RTL

需要时在表容器上设置 `dir="rtl"`。使用逻辑对齐工具类，例如 `text-end`。

<Preview class="w-full">
<div class="table-container" dir="rtl">
  <table class="table">
    <caption>قائمة الفواتير الأخيرة.</caption>
    <thead>
      <tr>
        <th>الفاتورة</th>
        <th>الحالة</th>
        <th class="text-end">المبلغ</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="font-medium">INV001</td>
        <td>مدفوعة</td>
        <td class="text-end">$250.00</td>
      </tr>
    </tbody>
  </table>
</div>
</Preview>

## React

```tsx
export function TableExample() {
  return (
    <div className="table-container">
      <table className="table">{/* Content of your table */}</table>
    </div>
  );
}
```

该发布版本尚未提供框架适配器；示例直接渲染同一语义 DOM，并由该版本的浏览器运行时增强交互。

## Vue

```vue
<template>
  <div class="table-container">
    <table class="table">
      <!-- Content of your table -->
    </table>
  </div>
</template>
```

该发布版本尚未提供框架适配器；示例直接渲染同一语义 DOM，并由该版本的浏览器运行时增强交互。
