site/docs/v0.4.0/zh/components/table.mdx
# 表格

表格以行列关系呈现可比较的结构化数据，并为标题、排序和紧凑浏览保留清晰语义。

<Preview class="w-full">
<div class="table-container">
<table class="table">
  <caption>最近账单列表</caption>
  <thead>
    <tr>
      <th>账单</th>
      <th>状态</th>
      <th>付款方式</th>
      <th>金额</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class="font-medium">INV001</td>
      <td>已支付</td>
      <td>信用卡</td>
      <td class="text-end">$250.00</td>
    </tr>
    <tr>
      <td class="font-medium">INV002</td>
      <td>待处理</td>
      <td>PayPal</td>
      <td class="text-end">$150.00</td>
    </tr>
    <tr>
      <td class="font-medium">INV003</td>
      <td>未支付</td>
      <td>银行转账</td>
      <td class="text-end">$350.00</td>
    </tr>
    <tr>
      <td class="font-medium">INV004</td>
      <td>已支付</td>
      <td>Paypal</td>
      <td class="text-end">$450.00</td>
    </tr>
    <tr>
      <td class="font-medium">INV005</td>
      <td>已支付</td>
      <td>信用卡</td>
      <td class="text-end">$550.00</td>
    </tr>
    <tr>
      <td class="font-medium">INV006</td>
      <td>待处理</td>
      <td>银行转账</td>
      <td class="text-end">$200.00</td>
    </tr>
    <tr>
      <td class="font-medium">INV007</td>
      <td>未支付</td>
      <td>信用卡</td>
      <td class="text-end">$300.00</td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td colspan="3">合计</td>
      <td class="text-end">$2,500.00</td>
    </tr>
  </tfoot>
</table>
</div>
</Preview>

## 用法

<Steps>
  <Step title="引入 CSS">

导入 Tailwind 和一个完整的 A3S UI 样式包。

```css
@import "tailwindcss";
@import "@a3s-lab/ui/a3s.css";
```

或者只导入基本CSS、表格组件CSS和一个样式包。

```css
@import "tailwindcss";
@import "@a3s-lab/ui/base.css";
@import "@a3s-lab/ui/components/table.css";
@import "@a3s-lab/ui/styles/a3s.css";
```

使用CDN或批量程序导入？请参见[安装页](/installation)。

  </Step>
  <Step title="添加表格 HTML">

将 `class="table"` 添加到您的表元素中。当需要水平滚动时，将其包裹在`class="table-container"`中。

```html
<div class="table-container">
<table class="table">
  <!-- Content of your table -->
</table>
</div>
```

  </Step>
</Steps>

<Callout type="warning" title="Scrollable tables clip overlays" icon="triangle-alert">
请勿将内联弹出框、下拉菜单、选择或工具提示放置在 `.table-container` 内。表格容器对宽表格使用水平溢出，因此可以剪切绝对定位的覆盖层或创建滚动条。将覆盖操作保留在可滚动表格区域之外，或者当表格不需要水平滚动时省略 `.table-container`。
</Callout>

## 示例

下面的示例遵循上游表模式，它们清晰地映射到 A3S UI 的非门户 HTML 模型。

### 带页脚

<Preview class="w-full">
<div class="table-container">
<table class="table">
  <caption>A list of your recent invoices.</caption>
  <thead>
    <tr>
      <th class="w-[100px]">Invoice</th>
      <th>Status</th>
      <th>Method</th>
      <th class="text-end">Amount</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class="font-medium">INV001</td>
      <td>Paid</td>
      <td>Credit Card</td>
      <td class="text-end">$250.00</td>
    </tr>
    <tr>
      <td class="font-medium">INV002</td>
      <td>Pending</td>
      <td>PayPal</td>
      <td class="text-end">$150.00</td>
    </tr>
    <tr>
      <td class="font-medium">INV003</td>
      <td>Unpaid</td>
      <td>Bank Transfer</td>
      <td class="text-end">$350.00</td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td colspan="3">Total</td>
      <td class="text-end">$2,500.00</td>
    </tr>
  </tfoot>
</table>
</div>
</Preview>

### 带操作

<Preview class="w-full">
<div class="table-container">
<table class="table">
  <thead>
    <tr>
      <th>Product</th>
      <th>Price</th>
      <th class="text-end">Actions</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class="font-medium">Wireless Mouse</td>
      <td>$29.99</td>
      <td class="text-end">
        <div class="inline-flex gap-2">
          <button type="button" class="btn" data-variant="outline" data-size="sm">Edit</button>
          <button type="button" class="btn" data-variant="destructive" data-size="sm">Delete</button>
        </div>
      </td>
    </tr>
    <tr>
      <td class="font-medium">Mechanical Keyboard</td>
      <td>$129.99</td>
      <td class="text-end">
        <div class="inline-flex gap-2">
          <button type="button" class="btn" data-variant="outline" data-size="sm">Edit</button>
          <button type="button" class="btn" data-variant="destructive" data-size="sm">Delete</button>
        </div>
      </td>
    </tr>
    <tr>
      <td class="font-medium">USB-C Hub</td>
      <td>$49.99</td>
      <td class="text-end">
        <div class="inline-flex gap-2">
          <button type="button" class="btn" data-variant="outline" data-size="sm">Edit</button>
          <button type="button" class="btn" data-variant="destructive" data-size="sm">Delete</button>
        </div>
      </td>
    </tr>
  </tbody>
</table>
</div>
</Preview>

### RTL

需要时在表容器上设置 `dir="rtl"`。使用逻辑对齐工具类，例如 `text-end`。

<Preview class="w-full">
<div class="table-container" dir="rtl">
  <table class="table">
    <caption>قائمة الفواتير الأخيرة.</caption>
    <thead>
      <tr>
        <th>الفاتورة</th>
        <th>الحالة</th>
        <th class="text-end">المبلغ</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class="font-medium">INV001</td>
        <td>مدفوعة</td>
        <td class="text-end">$250.00</td>
      </tr>
    </tbody>
  </table>
</div>
</Preview>

## React

```tsx
import { Table, useTable } from "@a3s-lab/ui/react";

export function Example() {
  const control = useTable();
  return (
    <Table ref={control.ref}>
      <table className="table"><caption>发布环境</caption><thead><tr><th scope="col">名称</th><th scope="col">状态</th></tr></thead><tbody><tr><th scope="row">生产环境</th><td>健康</td></tr></tbody></table>
    </Table>
  );
}
```

`useTable` 订阅清单中声明的 DOM 事件，并且只调用清单中公开的方法。适配器不创建另一套框架专属状态。

## Vue

```vue
<script setup lang="ts">
import { Table, useTable } from "@a3s-lab/ui/vue";

const control = useTable();
const componentRef = control.componentRef;
</script>

<template>
  <Table ref="componentRef">
    <table class="table"><caption>发布环境</caption><thead><tr><th scope="col">名称</th><th scope="col">状态</th></tr></thead><tbody><tr><th scope="row">生产环境</th><td>健康</td></tr></tbody></table>
  </Table>
</template>
```

`useTable` 订阅清单中声明的 DOM 事件，并且只调用清单中公开的方法。适配器不创建另一套框架专属状态。
